# tcscf

./: .gitignore  .gitmodules  CMakeLists.txt  convergence.sh  convergence.txt  data.txt  output-50-25.txt  output-qmc.txt  output.txt  qmcData.txt  quartz1148-cpptools-32138.core  quartz1538-srun-48123.core  quartz188-cpptools-11149.core  runHFTest.sh  seatac-darwin-bigsur-x86_64-gcc@12.1.0.cmake
basisFunctions/AQZ6P/: Ac  Ag  Al  Am  Ar  As  At  Au  B  Ba  Be  Bh  Bi  Bk  Br  C  Ca  Cd  Ce  Cf  Cl  Cm  Cn  Co  Cr  Cs  Cu  Db  Ds  Dy  Er  Es  Eu  F  Fe  Fl  Fm  Fr  Ga  Gd  (+78 more)
basisFunctions/ATZ3P/: Ac  Ag  Al  Am  Ar  As  At  Au  B  Ba  Be  Bh  Bi  Bk  Br  C  Ca  Cd  Ce  Cf  Cl  Cm  Cn  Co  Cr  Cs  Cu  Db  Ds  Dy  Er  Es  Eu  F  Fe  Fl  Fm  Fr  Ga  Gd  (+78 more)
basisFunctions/QZ6P/: Ac  Ag  Al  Am  Ar  As  At  Au  B  Ba  Be  Bh  Bi  Bk  Br  C  Ca  Cd  Ce  Cf  Cl  Cm  Cn  Co  Cr  Cs  Cu  Db  Ds  Dy  Er  Es  Eu  F  Fe  Fl  Fm  Fr  Ga  Gd  (+77 more)
basisFunctions/TZ3P/: Ac  Ag  Al  Al.1s  Am  Ar  Ar.1s  As  At  Au  B  B.1s  Ba  Be  Be.1s  Bh  Bi  Bk  Br  C  C.1s  Ca  Cd  Ce  Cf  Cl  Cl.1s  Cm  Cn  Co  Cr  Cs  Cu  Db  Ds  Dy  Er  Es  Eu  F  (+94 more)
cmake/: FindMathLibraries.cmake
scripts/: LebedevScraper.py  config-build.py  csvplotter.py
scripts/uberenv/: project.json
scripts/uberenv/spack_configs/: config.yaml
scripts/uberenv/spack_configs/darwin/: compilers.yaml  packages.yaml
scripts/uberenv/spack_configs/toss_3_x86_64_ib/: compilers.yaml  packages.yaml
src/: AtomicBasis.hpp  CMakeLists.txt  HartreeFock.cpp  HartreeFock.hpp  HydrogenLikeBasis.hpp  LvArrayInterface.hpp  OchiBasis.hpp  RAJAInterface.hpp  SlaterTypeOrbital.cpp  SlaterTypeOrbital.hpp  blasLapackInterface.cpp  blasLapackInterface.hpp  caliperInterface.cpp  caliperInterface.hpp  jastrowFunctions.hpp  mathFunctions.hpp  orthogonalization.hpp  qmcWrapper.hpp  quadrature.cpp  quadrature.hpp  setup.cpp  setup.hpp
src/integration/: ChebyshevGauss.hpp  Lebedev.cpp  Lebedev.hpp  TreutlerAhlrichsLebedev.hpp  changeOfVariables.hpp  integrateAll.hpp  qmcWrapper.hpp  quadrature.hpp
src/integration/data/: LebedevData.hpp  LebedevData_101.hpp  LebedevData_107.hpp  LebedevData_11.hpp  LebedevData_113.hpp  LebedevData_119.hpp  LebedevData_125.hpp  LebedevData_13.hpp  LebedevData_131.hpp  LebedevData_15.hpp  LebedevData_17.hpp  LebedevData_19.hpp  LebedevData_21.hpp  LebedevData_23.hpp  LebedevData_25.hpp  LebedevData_27.hpp  LebedevData_29.hpp  LebedevData_3.hpp  LebedevData_31.hpp  LebedevData_35.hpp  LebedevData_41.hpp  LebedevData_47.hpp  LebedevData_5.hpp  LebedevData_53.hpp  LebedevData_59.hpp  LebedevData_65.hpp  LebedevData_7.hpp  LebedevData_71.hpp  LebedevData_77.hpp  LebedevData_83.hpp  LebedevData_89.hpp  LebedevData_9.hpp  LebedevData_95.hpp
src/unitTests/: AtomicBasisTest.cpp  CMakeLists.txt  HartreeFockTest.cpp  IntegrationTest.cpp  SlaterTypeOrbitalTest.cpp  blasLapackInterfaceTest.cpp  gradientsTest.cpp  orthogonalizationTest.cpp  testingCommon.hpp
